<resources>
    <string name="app_name">AluraTravels</string>
    <string name="title">Especiais</string>
    <string name="country">Brasil</string>
    <string name="initial_content_banner">Banner inicial dos pacotes</string>
    <string name="State">São Paulo</string>
    <string name="days">2 Dias</string>
    <string name="price">R$ 243,99</string>
    <string name="Image_city">Imagem da cidade</string>
    <string name="title_button_payment">Realizar Pagamento</string>
    <string name="description_image_resume_packge">Imagem da ciadde do pacotede viagem</string>
    <string name="final_price_resume_package">Preço final</string>
    <string name="month_credit_card">MM</string>
    <string name="mask_card_name">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="year_credit_card">AA</string>
    <string name="security_code_credit_card">CVC</string>
    <string name="name_credit_card">Nome no cartão</string>
    <string name="finalize_purchase">Finalizar compra</string>
    <string name="orientation_payment">Digite as informações do cartrão de crédito que você deseja usar para o pagamento</string>
    <string name="value_package">Valor da Compra</string>
    <string name="number_credit_card">Numero do Cartão</string>
    <string name="title_banner">Parabens!</string>
    <string name="text_banner">Compra realizada com sucesso :)</string>
    <string name="text_purchase_resume">Confira o resumo da compra:</string>
    <string name="content_descrption_image_banner">Imagem de fundo do banner</string>
    <string name="content_description_image_package">Imagem do da cidade do pacote de viagem comprado</string>
</resources>
