<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PaymentActivity">


    <TextView
        android:id="@+id/activity_payment_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/orientation_payment"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_payment_value_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/value_package"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_payment_title" />

    <TextView
        android:id="@+id/activity_payment_price_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/activity_payment_value_package"
        app:layout_constraintTop_toBottomOf="@+id/activity_payment_value_package"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/activity_payment_number_credit_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/number_credit_card"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_payment_price_package"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:id="@+id/activity_payment_month_card"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/month_credit_card"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/activity_payment_number_credit_card"
        app:layout_constraintTop_toBottomOf="@+id/activity_payment_number_credit_card"
        app:layout_constraintBottom_toBottomOf="@+id/activity_payment_cvc_credit_card"
        android:maxLength="2"
        android:inputType="number"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:id="@+id/activity_payment_year_card"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/year_credit_card"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/activity_payment_month_card"
        app:layout_constraintTop_toBottomOf="@+id/activity_payment_number_credit_card"
        app:layout_constraintBottom_toBottomOf="@+id/activity_payment_cvc_credit_card"
        android:maxLength="2"
        android:inputType="number"
        android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
        android:id="@+id/activity_payment_cvc_credit_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_payment_number_credit_card"
        app:layout_constraintEnd_toEndOf="@id/activity_payment_number_credit_card"
        android:hint="@string/security_code_credit_card"
        android:inputType="number"
        android:maxLength="3"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:id="@+id/activity_payment_name_credit_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="@string/mask_card_name"
        app:layout_constraintStart_toStartOf="@id/activity_payment_month_card"
        app:layout_constraintEnd_toEndOf="@id/activity_payment_cvc_credit_card"
        app:layout_constraintTop_toBottomOf="@id/activity_payment_cvc_credit_card"
        android:hint="@string/name_credit_card"
        android:inputType="text"
        android:textAllCaps="true"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <Button
        android:id="@+id/activity_payment_button_finalize_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/activity_payment_name_credit_card"
        app:layout_constraintEnd_toEndOf="@+id/activity_payment_name_credit_card"
        app:layout_constraintTop_toBottomOf="@+id/activity_payment_name_credit_card"
        android:text="@string/finalize_purchase"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/background_button_payment"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>