<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PurchaseResumeActivity">
    
    <ImageView
        android:id="@+id/activity_purchase_resume_image_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/content_descrption_image_banner" />
    <TextView
        android:id="@+id/activity_purchase_resume_title_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/activity_purchase_resume_image_banner"
        app:layout_constraintEnd_toEndOf="@+id/activity_purchase_resume_image_banner"
        app:layout_constraintTop_toTopOf="@+id/activity_purchase_resume_image_banner"
        android:layout_marginTop="8dp"
        android:text="@string/title_banner"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/activity_purchase_resume_text_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/activity_purchase_resume_title_banner"
        app:layout_constraintEnd_toEndOf="@+id/activity_purchase_resume_title_banner"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_resume_title_banner"
        android:text="@string/text_banner"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/activity_purchase_resume_text_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_resume_image_banner"
        android:text="@string/text_purchase_resume"
        android:textAlignment="center"
        android:layout_marginTop="8dp"/>
    <ImageView
        android:id="@+id/activity_purchase_resume_image_package"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_resume_text_resume"
        tools:src="@drawable/sao_paulo_sp"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/content_description_image_package" />

    <TextView
        android:id="@+id/activity_purchase_resume_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_resume_image_package"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        tools:text="São Paulo"/>
    <TextView
        android:id="@+id/activity_purchase_resume_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/activity_purchase_resume_city"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_resume_city"
        tools:text="08/12 - 10/12 de 2017"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/activity_purchase_resume_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/activity_purchase_resume_date"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_resume_date"
        android:layout_marginTop="8dp"
        tools:text="R$ 243,99"/>

</androidx.constraintlayout.widget.ConstraintLayout>